Change notifications feature

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -26,6 +26,7 @@ en:
     entries: "entries"
     by: "by"
     edit: "Edit"
+    actions: "Actions"
     has_selected: "has selected the following:"
     has_answered: "has answered:"
     created_by: "Submitted by"
@@ -153,10 +154,12 @@ en:
         form_button: "Save notification"
         form_button_load: "Saving notification.."
         email_hint: "Email addresses should be separated by coma"
+        text_nodata: "No current notifications for this survey"
+        text_info: "Notifications are alerts that you can set up in order to communicate people about an answer that has been immediately submited in the survey. All notifications are being sent to email addresses you have entered."
         breadcrumbs:
           new: "New notification"
           edit: "Update notification"
-        subnav: "Survey notifications"
+        subnav: "Notifications"
         new:
           title: "NEW NOTIFICATION"
           subnav: "New notification"
@@ -174,13 +177,17 @@ en:
         index:
           title: "ALL NOTIFICATIONS"
         filters:
+          selected: "Selected"
+          add_filter: "Add a new filter"
           title: "Filters"
+          text: "Select the correct criteria based on the questions of this survey"
           add_new: "Add a new filter"
           select_title: "Add a name for this filter"
           select_question: "-- Select a question --"
           select_choice: "-- Select a choice --"
           select_image: "-- Select an image --"
           select_rate: "-- Select a rate --"
+          select_option: "-- Select an option --"
           select_condition: "-- Select a condition --"
           btn_save: "Save filter"
           loading: "saving.."
