--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -40,6 +40,7 @@ es:
     entries: "resultados"
     by: "por"
     edit: "Editar"
+    actions: "Acciones"
     has_selected: "ha seleccionado lo siguiente:"
     has_answered: "ha respondido:"
     created_by: "Enviado por"
@@ -167,10 +168,12 @@ es:
         form_button: "Guardar notificación"
         form_button_load: "Guardando notificación.."
         email_hint: "Ingrese los correos separados por coma"
+        text_nodata: "No se crearon notificaciones para esta encuesta"
+        text_info: "Las notificaciones son alertas que puedes administrar en caso que desees comunicar alguna persona en particular sobre alguna respuesta en particular que ha sido enviada en la encuesta. Todas las notificaciones son enviadas al listado de correos que proporciones."
         breadcrumbs:
           new: "Nueva notificación"
           edit: "Editar notificación"
-        subnav: "Notificaciones de encuesta"
+        subnav: "Notificaciones"
         new:
           title: "NUEVA NOTIFICACIÓN"
           subnav: "Nueva notificación"
@@ -188,13 +191,17 @@ es:
         index:
           title: "NOTIFICACIONES"
         filters:
+          selected: "Seleccionó"
+          add_filter: "Agrega un nuevo filtro"
           title: "Filtros"
+          text: "Selecciona el criterio adecuado en base a las preguntas de la encuesta"
           add_new: "Agrega un nuevo filtro"
           select_title: "Elige un nombre para este filtro"
           select_question: "-- Seleccione una pregunta --"
           select_choice: "-- Seleccione una opcion --"
           select_image: "-- Seleccione una imágen --"
           select_rate: "-- Calificación --"
+          select_option: "-- Seleccione opción --"
           select_condition: "-- Seleccione una condición --"
           btn_save: "Guardar filtro"
           loading: "Guardando.."
